@@ -38,6 +38,21 @@
   </keywords>
   <translation type="gettext">extension-manager</translation>
   <releases>
+		<release version="0.4.0" date="2022-09-26">
+			<description>
+				<ul>
+					<li>Fully adaptive mobile-friendly user interface</li>
+					<li>Paginated search results</li>
+					<li>Upgrade Assistant for checking extension compatibility</li>
+					<li>Unsupported extensions are hidden by default</li>
+					<li>Overhauled error and crash reporting</li>
+					<li>Full-screen image viewer</li>
+					<li>Handles new <code>gnome-extensions://</code> URI scheme</li>
+					<li>Randomised extension suggestions</li>
+					<li>Performance and stability</li>
+				</ul>
+			</description>
+		</release>
     <release version="0.3.2" date="2022-08-17">
       <description>
         <ul>
