@@ -1,5 +1,11 @@
 <ul>
-<li>Translation updates</li>
-<li>Various bug fixes</li>
-<li>Performance and stability</li>
+	<li>Fully adaptive mobile-friendly user interface</li>
+	<li>Paginated search results</li>
+	<li>Upgrade Assistant for checking extension compatibility</li>
+	<li>Unsupported extensions are hidden by default</li>
+	<li>Overhauled error and crash reporting</li>
+	<li>Full-screen image viewer</li>
+	<li>Handles new <code>gnome-extensions://</code> URI scheme</li>
+	<li>Randomised extension suggestions</li>
+	<li>Performance and stability</li>
 </ul>
